--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             
            </div>
         </div>
-            <div class="animation"></div>
+            <div class="animation">Bayern Munich sucks</div>
             </body>
             </html>
             
